connect to call without video or microphone and upgrade call on demand.

--- a/VideoWeb/VideoWeb/ClientApp/src/app/waiting-space/participant-waiting-room/participant-waiting-room.component.html
+++ b/VideoWeb/VideoWeb/ClientApp/src/app/waiting-space/participant-waiting-room/participant-waiting-room.component.html
@@ -63,3 +63,12 @@
     </app-participant-status-list>
   </div>
 </div>
+
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-one-half">
+    <input type="button" class="govuk-button" role="button" value="Connect Cam & Mic" (click)="connectMicAndCameraToCall()" />
+  </div>
+  <div class="govuk-grid-column-one-half">
+    <input type="button" class="govuk-button"  role="button" value="Disconnect Cam & Mic" (click)="disconnectMicAndCameraToCall()" />
+  </div>
+</div>
