--- a/VideoWeb/VideoWeb/ClientApp/src/app/vh-officer/vho-hearing-list/vho-hearing-list.component.html
+++ b/VideoWeb/VideoWeb/ClientApp/src/app/vh-officer/vho-hearing-list/vho-hearing-list.component.html
@@ -1,7 +1,9 @@
 <div id="list-column" class="govuk-grid-column-one-half govuk-!-padding-0">
   <dl id="conferences-list" class="govuk-summary-list">
+    <a style="margin-left:20px;" href="javascript:void(0);" (click)="showMonitoringGraph()">graph</a>
+
     <div class="govuk-summary-list__row" [ngClass]="{'selected-conference': isCurrentConference(conference)}"
-      *ngFor="let conference of conferences" (click)="selectConference(conference)">
+         *ngFor="let conference of conferences" (click)="selectConference(conference)">
       <dd class="govuk-summary-list__value govuk-!-padding-left-4">
         <p class="govuk-!-margin-0 govuk-!-padding-0">{{conference.scheduled_date_time | date:'HH:mm' }}</p>
         <span class="govuk-hint">
@@ -19,12 +21,12 @@
         </strong>
         <div class="govuk-!-margin-top-3 govuk-!-margin-bottom-3">
           <span class="govuk-!-padding-1 govuk-body-s"
-            [ngClass]="{'conference-ready': isOnTime(conference), 'conference-delayed': isDelayed(conference), 
-              'conference-suspended': isSuspended(conference), 'conference-paused': isPaused(conference), 
+                [ngClass]="{'conference-ready': isOnTime(conference), 'conference-delayed': isDelayed(conference),
+              'conference-suspended': isSuspended(conference), 'conference-paused': isPaused(conference),
               'conference-in-session': isInSession(conference), 'conference-closed': isClosed(conference)}">{{ getConferenceStatusText(conference) }}</span>
 
           <span class="govuk-!-padding-1 govuk-!-margin-left-2 report-conference govuk-body-s tooltip-wrapper"
-            (click)="copyToClipboard(conference);$event.stopPropagation()">
+                (click)="copyToClipboard(conference);$event.stopPropagation()">
             Copy UID
             <div id="tooltip-1" class="tooltip">
               <div class="govuk-grid-row">
@@ -38,4 +40,11 @@
       </dd>
     </div>
   </dl>
+</div>
+
+<div *ngIf="displayGraph">
+  <div class=" govuk-grid-row">
+    <app-monitoring-graph [pakagesLostData]="packageLostArray" [participantName]="selectedParticipantName">
+    </app-monitoring-graph>
+  </div>
 </div>
